# rm-nexus

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude/hooks/: git_guard.py
.claude/skills/launch/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: .env.example  pyproject.toml  rm_agent.py  run.py  server.py
backend/tests/: test_boundary_no_tools.py  test_nbc_contract.py  test_no_key_fallback.py  test_scaffold.py  test_sse_smoke.py
docs/: governance-and-security-review.html  governance-and-security-review.md  rm-nexus-documentation.html
frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: spec-002-tiles.spec.ts
frontend/scripts/: copy-docs.mjs
frontend/src/app/rm/: page.tsx
frontend/src/components/: ClientDetail.tsx  NBCCard.tsx  Sparkline.tsx  WbcNav.tsx
frontend/src/hooks/: useSSEStream.ts
frontend/src/lib/: rmClients.ts
frontend/src/types/: api.ts
specs/001-rm-clientnexus/: data-model.md  plan.md  process.md  quickstart.md  research.md  spec.md
specs/001-rm-clientnexus/checklists/: requirements.md
specs/001-rm-clientnexus/contracts/: api.types.md  nbc-agent.md  sse-contract.md
specs/002-richer-client-tiles/: spec.md
specs/003-code-security-review/: spec.md
