[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rm-nexus-backend"
version = "0.1.0"
description = "RM ClientNexus backend — tool-less NBC agent + FastAPI SSE server"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

# Top-level backend modules. Tests import these via pytest pythonpath (below), so this
# list only affects `pip install .`, not test collection.
[tool.setuptools]
py-modules = ["run", "server", "rm_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
